<resources>
    <string name="app_name">WorkSchedule</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="username">Username: </string>
    <string name="password">Password: </string>
    <string name="input_name">Nhập tên</string>
    <string name="k_ho_ch_m_i">Kế hoạch mới</string>
    <string name="all_">Tất cả  |</string>
    <string name="imp_">Quan trọng</string>
    <string name="on_going">Đang thực hiện</string>
    <string name="wsche">WSche</string>
    <string name="add_group">Thêm nhóm</string>
    <string name="nh_m">Nhóm</string>
    <string name="edit">Sửa</string>
    <string name="title">Tiêu đề</string>
    <string name="add_title">Thêm vào tên tiêu đề</string>
    <string name="description">Mô tả</string>
    <string name="add_des">Thêm mô tả</string>
    <string name="no_imp">Không quan trọng</string>
    <string name="day_month">Ngày tháng</string>
    <string name="time">Thời gian</string>
    <string name="classify">Phân loại</string>
    <string name="individual">Cá nhân</string>
    <string name="group">Nhóm</string>
    <string name="exit">Thoát</string>
    <string name="generate">Tạo</string>
    <string name="new_group">Nhóm mới</string>
    <string name="group_name">Tên nhóm</string>
    <string name="members">Thành viên</string>
    <string name="enter_group_name">Thêm tên nhóm</string>
    <string name="add_group_plan">Thêm kế hoạch nhóm</string>
    <string name="add_group_member">Thêm thành viên nhóm</string>
    <string name="edit_profile">Sửa hồ sơ</string>
    <string name="home">Trang chủ</string>
    <string name="share">Chia sẻ với bạn bè</string>
    <string name="info">Thông tin</string>
    <string name="setting">Cài đặt</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="completed">Hoàn thành</string>
    <string name="edit_">Chỉnh sửa</string>
    <string name="confirm">Xác nhận</string>
    <string name="report">Thống kê</string>
    <string name="pomodoro">Pomodoro</string>
    <string name="shortbreak">Tạm nghỉ</string>
    <string name="longbreak">Nghỉ lâu</string>
    <string name="start">Bắt đầu</string>
    <string name="task">Công việc</string>
    <string name="add_task">Thêm công việc</string>
    <string name="timer">Bộ đếm</string>
    <string name="auto_start_breaks">Tự động tính thời gian nghỉ</string>
    <string name="auto_start_pomo">Tự động tính thời gian làm việc</string>
    <string name="auto_check_task">Tự động đánh dấu công việc hoàn thành</string>
    <string name="auto_switch_task">Tự động chuyển công việc</string>
    <string name="pomodoro_report">Thống kê công việc</string>
    <string name="summary">Tóm tắt</string>
    <string name="chart">Biểu đồ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="activity_summary">Tóm tắt hoạt động</string>
    <string name="cumulative_hour">Số giờ tích lũy</string>
    <string name="accessed_days">Số ngày truy cập</string>
    <string name="activity_list">Danh sách công việc</string>
    <string name="pomo_name">Tên công việc</string>
    <string name="pomo_note">Mô tả công việc</string>
    <string name="cancel">Hủy</string>
    <string name="ok">OK</string>
    <string name="duration">Thời hạn</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="report_chart">Biểu đồ thống kê</string>
    <string name="save">Lưu</string>
    <string name="open_navigation_drawer">Open Drawer</string>
    <string name="close_navigation_drawer">Close Drawer</string>
    <string name="no_title">  </string>
    <string name="individual_info">Thông tin cá nhân</string>
    <string name="communicate">Truyền thông</string>
    <string name="pause">Dừng</string>
    <string name="refresh">Làm mới</string>
    <string name="pomodoro_setting">Cài đặt Pomodoro</string>
    <string name="channel_name">WSche Channel</string>
    <string name="channel_description">Channel mô tả</string>
    <string name="hello">Xin chào </string>
    <string name="relogin">Đăng nhập lại</string>
    <string name="back_to_work">Trở lại làm việc thôi bạn ơi!</string>
    <string name="exited_group_plan">Đã thoát nhóm </string>
    <string name="summary_report">Bản tóm tắt</string>
    <string name="chart_supervise">Theo dõi biểu đồ</string>
    <string name="change_avatar">Đổi ảnh đại diện</string>
    <string name="change_username">Đổi tên người dùng</string>
    <string name="change_password">Đổi mật khẩu</string>
    <string name="option">Tùy chọn</string>
    <string name="share_task">Chia sẻ kế hoạch</string>
    <string name="task_name">Tên kế hoạch</string>
    <string name="deadline">Thời hạn</string>
    <string name="receiver">Người nhận</string>
    <string name="insert_receiver_email">Nhập email người nhận</string>
    <string name="choose_file">Chọn tập tin</string>
    <string name="enter_file_name">Nhập tên tập tin</string>
    <string name="enter_username">Nhập tên người dùng</string>
    <string name="new_password">Mật khẩu mới</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="enter_password">Nhập mật khẩu</string>
</resources>