<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/baseline_home_24"
            android:title="@string/home"/>
        <item
            android:id="@+id/nav_group"
            android:icon="@drawable/group_sidebar"
            android:title="@string/group"/>
        <item
            android:id="@+id/nav_pomodoro"
            android:icon="@drawable/baseline_av_timer_24"
            android:title="@string/pomodoro"/>
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/baseline_share_24"
            android:title="@string/share"/>
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/baseline_info_24"
            android:title="@string/info"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/baseline_settings_24"
            android:title="@string/setting"/>
    </group>
    <item
        android:title="" />
    <item
        android:title="" />
    <item
        android:title="" />
    <item
        android:title="" />
    <item
        android:id="@+id/nav_logout"
        android:icon="@drawable/baseline_power_settings_new_24"
        android:title="@string/logout"/>
</menu>