<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rectangle_4"
    android:layout_width="match_parent"
    android:layout_height="640dp"
    android:layout_centerHorizontal="true"
    android:layout_alignParentBottom="true"
    android:background="@drawable/rectangle_4"
    android:elevation="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_new_plan_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_basex2"
        android:textSize="24sp"
        android:textColor="#EEF3FA"
        android:textStyle="bold"
        android:text="@string/k_ho_ch_m_i" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#EEF3FA"
        android:layout_marginTop="@dimen/margin_basex3"
        android:layout_marginLeft="@dimen/margin_basex10"
        android:layout_marginRight="@dimen/margin_basex10"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_basex4"
        android:layout_marginTop="@dimen/margin_basex10"
        android:text="@string/title"
        android:textSize="18sp"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/et_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_basex3"
        android:background="@drawable/rectangle_white"
        android:hint="@string/add_title"
        android:paddingHorizontal="@dimen/margin_basex3"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_basex4"
        android:layout_marginTop="@dimen/margin_basex4"
        android:text="@string/description"
        android:textSize="18sp"
        android:textColor="@color/white"/>
    <EditText
        android:id="@+id/et_description"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginHorizontal="@dimen/margin_basex3"
        android:background="@drawable/rectangle_white"
        android:hint="@string/add_des"
        android:paddingHorizontal="@dimen/margin_basex3"/>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_basex3"
        android:layout_marginTop="@dimen/margin_basex2">
        <CheckBox
            android:id="@+id/chb_not_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_imp"
            android:textSize="18sp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"/>
        <CheckBox
            android:id="@+id/chb_important"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/imp_"
            android:textSize="18sp"
            android:buttonTint="@color/white"
            android:textColor="@color/white"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/margin_basex2"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_basex4"
                android:layout_marginTop="@dimen/margin_basex2"
                android:text="@string/day_month"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_set_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginHorizontal="@dimen/margin_basex3"
                android:drawableLeft="@drawable/baseline_calendar_month_24"
                android:text="dd/mm/yy"
                android:textColor="#A1A1A1"
                android:drawableTint="#A1A1A1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_basex4"
                android:layout_marginTop="@dimen/margin_basex2"
                android:text="@string/time"
                android:textSize="18sp"
                android:textColor="@color/white"/>
            <Button
                android:id="@+id/btn_set_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginHorizontal="@dimen/margin_basex3"
                android:drawableLeft="@drawable/baseline_access_alarm_24"
                android:drawableTint="#A1A1A1"
                android:text="hh : mm"
                android:textColor="#A1A1A1"/>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_basex4">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_basex4"
            android:layout_marginTop="@dimen/margin_basex2"
            android:text="@string/classify"
            android:textSize="18sp"
            android:textColor="@color/white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/rectangle_white"
            android:layout_marginHorizontal="@dimen/margin_basex3"
            android:weightSum="2">
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_set_individual"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginHorizontal="@dimen/margin_basex3"
                android:drawableLeft="@drawable/baseline_person_outline_24"
                android:drawableTint="@color/text_color"
                android:text="@string/individual"
                android:textColor="@color/text_color"/>
            <Button
                android:layout_weight="1"
                android:id="@+id/btn_set_group"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:layout_marginHorizontal="@dimen/margin_basex3"
                android:drawableLeft="@drawable/group"
                android:text="@string/group"
                android:textColor="#A1A1A1"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/margin_basex4"
        android:weightSum="2">
        <Button
            android:id="@+id/btn_exit"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/exit"
            android:textSize="22sp"/>
        <Button
            android:id="@+id/btn_xacnhan"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#456ADD"
            android:text="@string/generate"
            android:textSize="22sp"/>
    </LinearLayout>

</LinearLayout>