<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@drawable/rectangle_6">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/share_task"
        android:textStyle="bold"
        android:textSize="24sp"
        android:gravity="center"
        android:background="@drawable/rectangle_5"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_task_24"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex2"/>
        <TextView
            android:id="@+id/tv_name_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/task_name"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex8"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_summarize_24"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex2"/>
        <TextView
            android:id="@+id/tv_description_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex8"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="18sp"
            android:textStyle="bold"
            android:drawableLeft="@drawable/baseline_phonelink_ring_24"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex2"/>
        <TextView
            android:id="@+id/tv_deadline_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/duration"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex8"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"
            android:paddingLeft="@dimen/margin_basex2"
            android:drawableLeft="@drawable/baseline_person_outline_24"/>
        <EditText
            android:id="@+id/et_receiver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_receiver_email"
            android:paddingLeft="@dimen/margin_basex2"
            android:layout_marginHorizontal="@dimen/margin_basex2"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_basex4"
            android:layout_marginVertical="@dimen/margin_basex2"
            android:weightSum="2">
            <Button
                android:id="@+id/btn_cancel_share"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/gray"
                android:text="@string/cancel"
                android:layout_weight="1"
                android:layout_marginRight="@dimen/margin_basex4"/>
            <Button
                android:id="@+id/btn_save_share"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:backgroundTint="#00BFFF"
                android:text="@string/ok"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/margin_basex4"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>